# gc_ws_version1

./: .gitignore  CLAUDE.md  UAV_Navigation_Tutorial.md  VSCODE_GIT_GUIDE.md  change.md
shfiles/: 0214ego_run_noplanner.sh  0214planner_interactive.sh  check_all.sh  check_imu.sh  check_odom.sh  check_thrust.sh  mavros.sh  run_demo.sh  run_gc.sh  run_planning.sh  takeoff.sh
src/: 0214planner_waypoints.sh  ego_run.sh  ego_run_vins.sh  eight_run.sh  land.sh  max_freq.sh  px4.sh  record.sh  record_fio.sh  vis_run.sh
src/Utils/quadrotor_msgs/: CMakeLists.txt
src/ekf_pose/launch/: PX4_vio_drone.yaml  mocap_and_lidar.launch  nokov.launch
src/ekf_pose/src/: ekf_node_vio_timesync_with_acc_pub.cpp
src/faster-lio/: CMakeLists.txt
src/faster-lio/config/: avia.yaml
src/faster-lio/include/: laser_mapping.h
src/faster-lio/launch/: mapping_with_driver.launch
src/faster-lio/rviz_cfg/: loam_livox.rviz
src/faster-lio/src/: laser_mapping.cc
src/livox_ros_driver2/config/: MID360_config.json  mixed_HAP_MID360_config.json
src/livox_ros_driver2/src/: lddc.cpp  lds.cpp  lds_lvx.cpp  livox_ros_driver2.cpp
src/mission_control/: CMakeLists.txt  package.xml
src/mission_control/config/: mission_param2.yaml  mission_params.yaml  mission_params_new.yaml
src/mission_control/launch/: missioncontrol.launch
src/opencv_detect/: CMakeLists.txt  package.xml
src/opencv_detect/launch/: color_detect.launch
src/opencv_detect/scripts/: color_detect_node.py
src/opencv_detect/srv/: Color_detection.srv
src/scrips/: max_emc_freq.sh  set_gpu_max.sh
(+56 files in other folders)
